# fast-api-app

./: FEATURES.md  Makefile  README.md  app.db  main.py  pyproject.toml
app/: database.py
app/models/: response_model.py  task_model.py
app/routes/: task_router.py
